--- a/Lesson 5/HW_2.1/preloader-2/index.html
+++ b/Lesson 5/HW_2.1/preloader-2/index.html
@@ -9,31 +9,31 @@
 <main>
     <div class="animation">
         <ul class="spinner">
-            <li style="--i:1;"></li>
-            <li style="--i:2;"></li>
-            <li style="--i:3;"></li>
-            <li style="--i:4;"></li>
-            <li style="--i:5;"></li>
-            <li style="--i:6;"></li>
-            <li style="--i:7;"></li>
-            <li style="--i:8;"></li>
-            <li style="--i:9;"></li>
-            <li style="--i:10;"></li>
-            <li style="--i:11;"></li>
-            <li style="--i:12;"></li>
-            <li style="--i:13;"></li>
-            <li style="--i:14;"></li>
-            <li style="--i:15;"></li>
-            <li style="--i:16;"></li>
+            <li style="--i:1;"><div></div></li>
+            <li style="--i:2;"><div></div></li>
+            <li style="--i:3;"><div></div></li>
+            <li style="--i:4;"><div></div></li>
+            <li style="--i:5;"><div></div></li>
+            <li style="--i:6;"><div></div></li>
+            <li style="--i:7;"><div></div></li>
+            <li style="--i:8;"><div></div></li>
+            <li style="--i:9;"><div></div></li>
+            <li style="--i:10;"><div></div></li>
+            <li style="--i:11;"><div></div></li>
+            <li style="--i:12;"><div></div></li>
+            <li style="--i:13;"><div></div></li>
+            <li style="--i:14;"><div></div></li>
+            <li style="--i:15;"><div></div></li>
+            <li style="--i:16;"><div></div></li>
         </ul>
         <ul class="text">
-            <li style="--i:1">L</li>
-            <li style="--i:2">o</li>
-            <li style="--i:3">a</li>
-            <li style="--i:4">d</li>
-            <li style="--i:5">i</li>
-            <li style="--i:6">n</li>
-            <li style="--i:7">g</li>
+            <li style="--i:0"><span>L</span></li>
+            <li style="--i:1"><span>o</span></li>
+            <li style="--i:2"><span>a</span></li>
+            <li style="--i:3"><span>d</span></li>
+            <li style="--i:4"><span>i</span></li>
+            <li style="--i:5"><span>n</span></li>
+            <li style="--i:6"><span>g</span></li>
         </ul>
     </div>
 </main>
