a tag was added to buttons, refactoring

--- a/Lesson 5/HW_5.2/index.html
+++ b/Lesson 5/HW_5.2/index.html
@@ -17,12 +17,14 @@
     <h1>New York’s favorite organic hamburger joint</h1>
     <img class="header-img" src="img/burgers.png" alt="burgers photo">
     <div class="about-us">
-        <div class="half-page right">
+        <div class="half">
             <h2>the burger above all burgers</h2>
         </div>
-        <div class="half-page">
+        <div class="half">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec ornare neque.</p>
-            <div class="btn">about us</div>
+            <a href="/">
+                <div class="btn">about us</div>
+            </a>
         </div>
     </div>
     <div class="gallery">
@@ -34,7 +36,9 @@
     </div>
     <div class="get-started">
         <h2>order online or come visit us today</h2>
-        <div class="btn">get started</div>
+        <a href="/">
+            <div class="btn">get started</div>
+        </a>
     </div>
 </div>
 </body>
