Titles were fixed

--- a/Lesson 6/results/HW_6.3/index.html
+++ b/Lesson 6/results/HW_6.3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List</title>
+    <title>Instagram login page</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 </head>
