alt text for images was added

--- a/Lesson 7/results/HW_7.1/index.html
+++ b/Lesson 7/results/HW_7.1/index.html
@@ -12,21 +12,21 @@
             <h3>Lorem</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             <div class="img-container">
-                <img src="img/Ds3_Tool.png">
+                <img src="img/Ds3_Tool.png" alt="Ds3 tool icon">
             </div>
         </div>
         <div class="card active">
             <h3>Lorem</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             <div class="img-container">
-                <img src="img/Chessboard.png">
+                <img src="img/Chessboard.png" alt="Chessboard icon">
             </div>
         </div>
         <div class="card">
             <h3>Lorem</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             <div class="img-container">
-                <img src="img/Battle.png">
+                <img src="img/Battle.png" alt="Battle icon">
             </div>
         </div>
     </div>
