page-constraint was added, refactoring

--- a/Lesson 7/results/HW_7.2/index.html
+++ b/Lesson 7/results/HW_7.2/index.html
@@ -7,65 +7,71 @@
 </head>
 <body>
 <header>
-    <span class="logo">LOREM</span>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Location</a></li>
-            <li><a href="/">Contact</a></li>
-            <li><a href="/">Blog</a></li>
-        </ul>
-    </nav>
+    <div class="page-constraint">
+        <span class="logo">LOREM</span>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Location</a></li>
+                <li><a href="/">Contact</a></li>
+                <li><a href="/">Blog</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 <main>
     <section class="first-screen">
-        <div>
-            <div class="lbl first-screen-main-text">One posotion</div>
-            <h1>One posotion One posotion</h1>
-            <p class="first-screen-main-text">
-                One posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne
-                posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne
-                posotionOne posotionOne posotion
-            </p>
-            <button class="main-btn">ABOUT</button>
+        <div class="page-constraint">
+            <div>
+                <div class="lbl">
+                    <p>One posotion</p>
+                </div>
+                <h1>One posotion One posotion</h1>
+                <p>
+                    One posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne
+                    posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne posotionOne
+                    posotionOne posotionOne posotion
+                </p>
+                <button class="main-btn">ABOUT</button>
+            </div>
+            <img class="main-img" src="img/LED-Bulb.png" alt="LED bulb">
         </div>
-        <img class="main-img" src="img/LED-Bulb.png" alt="LED bulb">
     </section>
-    <section class="information">
-        <div class="sun-items-container">
+    <section class="information page-constraint">
+        <div class="sun-container">
             <div class="sun-item">
-                <div class="sun-icon-w"></div>
+                <img src="img/red-sun.svg" alt="red sun icon">
                 <div>
                     <h4>40+</h4>
                     <p>LOREM</p>
                 </div>
             </div>
             <div class="sun-item">
-                <div class="sun-icon-w"></div>
+                <img src="img/pink-sun.svg" alt="pink sun icon">
                 <div>
                     <h4>40+</h4>
                     <p>LOREM</p>
                 </div>
             </div>
             <div class="sun-item">
-                <div class="sun-icon-w"></div>
+                <img src="img/cyan-sun.svg" alt="cyan sun icon">
                 <div>
-                    <h4>40+</h4>
+                    <h4>240</h4>
                     <p>LOREM</p>
                 </div>
             </div>
             <div class="sun-item">
-                <div class="sun-icon-w"></div>
+                <img src="img/blue-sun.svg" alt="blue sun icon">
                 <div>
-                    <h4>40+</h4>
+                    <h4>240</h4>
                     <p>LOREM</p>
                 </div>
             </div>
             <div class="sun-item">
-                <div class="sun-icon-w"></div>
+                <img src="img/green-sun.svg" alt="green sun icon">
                 <div>
-                    <h4>40+</h4>
+                    <h4>240</h4>
                     <p>LOREM</p>
                 </div>
             </div>
@@ -73,7 +79,7 @@
         <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam assumenda distinctio earum eos eveniet
             illum, possimus quis reiciendis </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam </p>
-        <div class="sun-cards-container">
+        <div class="sun-container">
             <div class="sun-card">
                 <img class="sun-icon" src="img/sun.svg" alt="sun icon">
                 <p>One posotionOne posotionOne posotion</p>
